[package]
name = "feed-transformer"
version = "0.1.0"
edition = "2024"

[features]
track-mem = ["dep:peak_alloc"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
peak_alloc = { version = "0.3.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
struson = { version = "0.6", features = ["serde"] }
thiserror = "2.0.18"
